--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <audio id="notificationSound" src="sound.wav"></audio>
   </body>
 </html>
