--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
     <title>MM2Flip</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Unable to reach resources</noscript>
     <div id="root"></div>
     <audio id="notificationSound" src="sound.wav"></audio>
   </body>
